tests/reject/ambiguousOverload.emojic
🐇 🐟 🍇
  🖍🆕 name 🔶🏠🔡

  🆕🍼 name 🔶🏠🔡 🍇🍉

  ❗️ 🙋 number 🔢 🍇
    😀🔤normal🔤❗️
  🍉

  ❗️ 🙋 number 🍬🔢 🍇
    😀🔤optional🔤❗️
  🍉

  ❗️ 🙋 number 🍬🔡 🍇
    😀🔤optional🔤❗️
  🍉
🍉

🏁 🍇
  🆕🔶🏠🐟🆕 🔤Shawn🔤❗️ ➡️ a

  🙋a 🤷‍♂️ ❗️
🍉
